--- a/Site-da-modelo-Ana-Bella/index.HTML
+++ b/Site-da-modelo-Ana-Bella/index.HTML
@@ -40,7 +40,7 @@ Duis aliquam pharetra augue, in auctor magna porttitor ac. In libero purus, dign
 
  </p>
  </div>
- <div>
+ <div><!--Direitos-->
  	<h4 class="centralizar">Todos os direitos reservados</h4>
  </div>
  
